--- a/resources/inactive.css
+++ b/resources/inactive.css
@@ -1,12 +1,12 @@
 body {
-  background-color: #e4e4e4;
+  background-color: #ededed;
 }
 
 h3 {
-  border-top: 1px solid #cecece;
-  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#dbdbdb), to(#818181));
+  border-top: 1px solid #a8a8a8;
+  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#c2c2c2), to(#9c9c9c));
 }
 
 h3 a {
-  text-shadow: 0px 1px 2px #808080;
+  text-shadow: 0px 1px 2px #727272;
 }
