--- a/resources/inactive.css
+++ b/resources/inactive.css
@@ -10,3 +10,22 @@ h3 {
 h3 a {
   text-shadow: 0px 1px 2px #727272;
 }
+
+.accordion li {
+	border-top: 1px solid #c2c2c2;
+	border-bottom: 1px solid #c2c2c2;
+	border-right: 1px solid #c2c2c2;
+	color: #c2c2c2;
+}
+
+.accordion li a {
+	color: #c2c2c2;
+}
+
+.accordion li:first-of-type {
+	border-left: 1px solid #c2c2c2;
+}
+
+.accordion li {
+	background-color: transparent;
+}
