--- a/resources/style.css
+++ b/resources/style.css
@@ -154,33 +154,44 @@ p.feed-content {
 }
 
 .accordion {
+  width: 100%;
+  height: 2em;
+  padding: 1px;
   overflow:hidden;
-  list-style:none;
+  list-style: none;
 }
+
 .accordion li {
   float:left;
-  width: 10%;
+  width: 15px;
   overflow: hidden;
   text-overflow: ellipsis;
+  text-wrap: suppress;
+	white-space: nowrap;
   padding: 2px;
 }
+
 .accordion li:first-of-type {
   -webkit-border-radius:10px 0 0 10px;
   padding-left: 4px;
 }
+
 .accordion li:last-of-type {
   -webkit-border-radius:0 10px 10px 0;
   padding-right: 4px;
 }
+
 .accordion:hover li {
-  width: 10%;
+  width: 15px;
 }
+
 .accordion li:hover {
   width: auto;
   padding-left: 4px;
   padding-right: 4px;
   background-color: #bbcef1;
 }
+
 .accordion li a:hover {
 	text-decoration: none;
 	color: black;
